k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: riftco-tradesense
spec:
  type: ClusterIP  # Changed from LoadBalancer since we'll use the Ingress
  selector:
    app: demo
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
