k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: riftco-tradesense
  annotations:
    ingress.gcp.kubernetes.io/pre-shared-cert: "tradesense-certificate"
    kubernetes.io/ingress.class: "gce"
    
spec:
  rules:
  - http:
      paths:
      - path: /api/pdf
        pathType: Prefix
        backend: 
          service:
            name: pdfprocessor-service
            port:
              number: 8080
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: riftco-tradesense-simpleauthserver-service
            port:
              number: 8080
      - path: /r
        pathType: Prefix
        backend:
          service:
            name: r-app-service
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: demo-service  # Updated to point to our demo service
            port:
              number: 8080
